Update clazz.newInstance() to clazz.getDeclaredConstructor().newInstance()